--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <script src="main.js"></script> -->
     <link rel="stylesheet" href="styles.css">
     <title>Project 1 Game</title>
 </head>
@@ -13,6 +14,6 @@
     <div id="game-board">
         <canvas id="canvas" width="500" height="500"></canvas>  
     </div>
-   
+   <script src="main.js"></script>
 </body>
 </html>
