--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,16 @@
     <link rel="stylesheet" href="styles.css">
     <title>Project 1 Game</title>
 </head>
+
 <body>
     <header>
-        <button id="start-button">Start Game</button> 
+        <button id="start-button">Start Game</button>
     </header>
     <div id="game-board">
-        <canvas id="canvas" width="500" height="500"></canvas>  
+        <canvas id="canvas" width="500" height="500"></canvas>
     </div>
-   <script src="main.js"></script>
+    <script src="main.js"></script>
+    <script src='secondLayout.js'></script>
 </body>
+
 </html>
