--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <script src="main.js"></script> -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>Project 1 Game</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <button id="start-button">Start Game</button>
+      <button id="start-button">Start Game</button>
     </header>
     <div id="game-board">
-        <canvas id="canvas" width="500" height="500"></canvas>
+      <canvas id="canvas" width="500" height="500"></canvas>
     </div>
-    <script src="main.js"></script>
-    <script src='secondLayout.js'></script>
-</body>
-
+    <!-- <script src="main.js"></script> -->
+    <script src="secondLayout.js"></script>
+  </body>
 </html>
