--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         <button id="start-button">Start Game</button>
     </header>
     <div id="game-board">
-        <canvas id="canvas" width="500" height="500"></canvas>
+        <canvas id="canvas" width="300" height="300"></canvas>
     </div>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
     <script src='secondLayout.js'></script>
+    <script src="circle.js"></script>
 </body>
 
 </html>
