--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <header>
       <button id="start-button">Start Game</button>
     </header>
-    <div id="game-board">
-        <canvas id="canvas" width="300" height="300"></canvas>
+    <div >
+        <canvas id="canvas" width="500" height="500"></canvas>
     </div>
-    <!-- <script src="main.js"></script> -->
+    <!-- <div>
+      <canvas id="canvo" width="300" height="300"></canvas>
+    </div> -->
     <script src='secondLayout.js'></script>
-    <script src="circle.js"></script>
+     <script src="circle.js"></script> 
 </body>
 
 </html>
