--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <script src="main.js"></script> -->
-    <link rel="stylesheet" href="styles.css" />
-    <title>Project 1 Game</title>
-  </head>
 
-  <body>
-    <header>
-      <button id="start-button">Start Game</button>
-    </header>
-    <div id="game-board">
-        <canvas id="canvas" width="300" height="300"></canvas>
-    </div>
-    <!-- <script src="main.js"></script> -->
-    <script src='secondLayout.js'></script>
-    <script src="circle.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- <script src="main.js"></script> -->
+  <link rel="stylesheet" href="styles.css" />
+  <title>Project 1 Game</title>
+</head>
+
+<body>
+  <header>
+    <button id="start-button">Start Game</button>
+  </header>
+  <div id="game-board">
+    <canvas id="canvas" width="1900" height="800"></canvas>
+    <!-- <canvas id="canvo" width="300" height="300"></canvas> -->
+
+  </div>
+  <!-- <script src="main.js"></script> -->
+  <script src='secondLayout.js'></script>
+  <!-- <script src="circle.js"></script> -->
 </body>
 
 </html>
