add the text fro the interface first page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   </div>
   <!-- <script src="main.js"></script> -->
   <script src='secondLayout.js'></script>
+  <script src="startPage.js"></script>
   <script src="circle.js"></script>
+
 
 </body>
 
