--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
   </header>
   <div id="game-board">
     <canvas id="canvas" width="1500" height="800"></canvas>
-    <!-- <canvas id="canvo" width="300" height="300"></canvas> -->
-
   </div>
-  <!-- <script src="main.js"></script> -->
+  
   <script src='secondLayout.js'></script>
   <script src="startPage.js"></script>
   <script src="circle.js"></script>
-
+  <!-- <script src="animation.js"></script> -->
 
 </body>
 
