--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <canvas id="canvas" width="1500" height="800"></canvas>
   </div>
   
-  <script src='secondLayout.js'></script>
+  <!-- <script src='secondLayout.js'></script>
   <script src="startPage.js"></script>
-  <script src="circle.js"></script>
-  <!-- <script src="animation.js"></script> -->
+  <script src="circle.js"></script> -->
+  <script src="animation.js"></script>
 
 </body>
 
