--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
   <div id="game-board">
     <canvas id="canvas" width="1700" height="800"></canvas>
   </div>
+  <audio src="/sound effects/Pigeondust - Chienowa.mp3" id="game-sound"></audio>
+  <audio src="/sound effects/gameover.wav" id="game-over"></audio>
+  <audio src="/sound effects/win sound.mp3" id="win"></audio>
+  <audio src="/sound effects/money sound.mp3" id="money-sound"></audio>
+  <audio src="/sound effects/health sound.mp3" id="health-sound"></audio>
+  <audio src="/sound effects/entertainment sound.mp3" id="entertainment-sound"></audio>
+  <audio src="/sound effects/love sound.mp3" id="love-sound"></audio>
 
   <script src="secondLayout.js"></script>
   <script src="startPage.js"></script>
