--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Life Balance Game</h1>
   </header>
   <div id="game-board">
-    <canvas id="canvas" width="1700" height="800"></canvas>
+    <canvas id="canvas" width="1200" height="700"></canvas>
   </div>
   <audio src="/sound effects/Pigeondust - Chienowa.mp3" id="game-sound"></audio>
   <audio src="/sound effects/gameover.wav" id="game-over"></audio>
@@ -27,7 +27,7 @@
 
   <script src="secondLayout.js"></script>
   <script src="startPage.js"></script>
-  <script src="class.js"></script>
+  <script src="classes.js"></script>
   <script src="circle.js"></script>
   <!-- <script src="animation.js"></script> -->
 </body>
