--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
     <h1>Life Balance Game</h1>
   </header>
   <div id="game-board">
-    <canvas id="canvas" width="1700" height="800"></canvas>
+    <canvas id="canvas" width="1250" height="800"></canvas>
   </div>
 
   <script src="secondLayout.js"></script>
   <script src="startPage.js"></script>
   <script src="class.js"></script>
   <script src="circle.js"></script>
+  <script src="fitToScreen.js"></script>
+
   <!-- <script src="animation.js"></script> -->
 </body>
 
