--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <script src="startPage.js"></script>
     <script src="classes.js"></script>
     <script src="circle.js"></script>
+    <script src="draw-bg.js"></script>
+    <script src="add-sound.js"></script>
 
     <!-- <script src="animation.js"></script> -->
   </body>
