--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
   <body>
     <header>
-      <h1>Life Balance Game</h1>
+      <img src="images/Gaming-with-life.png" />
+
+      <!-- <h1>Gaming With Life</h1> -->
     </header>
     <div id="game-board">
       <canvas id="canvas" width="1200" height="700"></canvas>
@@ -35,6 +37,7 @@
     <script src="circle.js"></script>
     <script src="draw-bg.js"></script>
     <script src="add-sound.js"></script>
+    <script src="clickhandler.js"></script>
 
     <!-- <script src="animation.js"></script> -->
   </body>
