--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
     <audio src="/sound effects/win sound.mp3" id="win"></audio>
     <audio src="/sound effects/money sound.mp3" id="money-sound"></audio>
     <audio src="/sound effects/health sound.mp3" id="health-sound"></audio>
-    <audio src="/sound effects/entertainment sound.mp3" id="entertainment-sound"></audio>
+    <audio
+      src="/sound effects/entertainment sound.mp3"
+      id="entertainment-sound"
+    ></audio>
     <audio src="/sound effects/love sound.mp3" id="love-sound"></audio>
+    <audio src="/sound effects/enterkey.mp3" id="enterKey-sound"></audio>
+    <audio src="/sound effects/typing.mp3" id="typing-sound"></audio>
 
     <script src="secondLayout.js"></script>
     <script src="startPage.js"></script>
